SUBDIRS = images

desktopentry_DATA = wallbox.desktop
icon_DATA = wallbox32.png

#supporting files to place in /usr/share/wallbox
pkgdata_DATA = comment.ui notification.ui wallbox.ui wizard.ui
    
EXTRA_DIST = wallbox32.png  wallbox.desktop comment.ui notification.ui wallbox.ui wizard.ui
CLEANFILES = *~ wallbox.desktop

