imagesdir = $(pkgdatadir)/images
images_DATA = \
    empty.gif \
    wallbox_p.png \
    wallbox_7.png \
    q_silhouette.gif \
    wallbox.svg \
    wallbox_6.png \
    wallbox_4.png \
    wallbox_1.png \
    wallbox.png \
    wallbox_2.png \
    wallbox_3.png \
    wallbox_9.png \
    wallbox_5.png \
    wallbox_8.png


EXTRA_DIST = \
	$(images_DATA)
